<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proton</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="write_error">Can\'t write image to disk</string>
    <string name="saving">Saving image…</string>
    <string name="share_title">Share Image</string>
    <string name="save_complete">Save complete</string>
    <string name="read_error">Error reading image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="action_about">About</string>
    <string name="about1">I should write something here really. Not sure what,\u00A0though.</string>
    <string name="about2">I should write something here really. Not sure what,\u00A0though.</string>
    <string name="attribution1">App icon based on Polygon by Yohan\u00A0Boniface.</string>

    <!-- Name of the album the saved photos get put into. Should be the same as the app name -->
    <string name="album_name">Proton</string>
    <string name="logo_content_description">Application logo</string>

</resources>
