<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/light_forground"
        />

        <TextView
            style="@style/about_page_text"
            android:text="@string/about1"
            />

        <TextView
            android:id="@+id/about_proton"
            style="@style/about_page_text"
            android:text="movieos.org/code/proton"
            android:textColor="@color/hilight"
            android:background="@drawable/button_background"
            />

        <TextView
            style="@style/about_page_text"
            android:text="@string/about2"
            />

        <TextView
            android:id="@+id/about_icon"
            style="@style/about_page_text"
            android:textColor="@color/hilight"
            android:text="@string/attribution1"
            android:background="@drawable/button_background"
            />

    </LinearLayout>
</ScrollView>
